# kairix

./: .gitignore  README.md  pyproject.toml
src/kairix/: __init__.py
src/kairix/core/: __init__.py  engine.py  reporting.py  validation.py
src/kairix/statistics/: __init__.py  rmst.py
src/kairix/survival/: __init__.py  ab_testing.py  estimator.py  local_impl.py  spark_impl.py  univariate.py  utils.py
tests/: __init__.py  conftest.py
tests/survival/: __init__.py  test_ab_testing.py
